<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_stations"
        android:title="@string/pref_stations" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_garages"
        android:title="@string/pref_garages" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_price_updates"
        android:summary="@string/pref_show_price_updates_summary"
        android:title="@string/pref_show_price_updates" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_logo"
        android:title="@string/pref_logo" />
    <!--
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_message_bar"
        android:title="@string/pref_message_bar" />
        -->
</PreferenceScreen>